# sigrok-cli

./: .gitignore  CMakeLists.txt  README  config.h.in  decode.c  device.c  input.c  main.c  options.c  session.c  show.c  sigrok-cli.h
contrib/: sigrok-cli_cross.nsi.in
